# multipalette

./: .gitignore  README.md  pyproject.toml  setup.cfg
crello_samples/: json_sample_1.json  json_sample_156.json
data/model_test_input/crello_samples/: json_sample_111.json  json_sample_123.json  json_sample_143.json  json_sample_194.json  json_sample_2.json  json_sample_23.json  json_sample_44.json  json_sample_7.json  json_sample_85.json
data/trained_models/bert_lab_bins_16_0.1_0.3_nop_2/: saved_model.pb
data/trained_models/bert_lab_bins_16_0.1_0.3_nop_2/variables/: variables.data-00000-of-00001  variables.index
data/training_data/data_bert/data_color/: color_corpus_lab_bins_16_train_sklearn.txt  color_corpus_lab_bins_16_val_sklearn.txt  color_vocab_lab_bins_16_train_sklearn.txt
data/training_data/data_bert/data_color_pred/: color_corpus_pred.txt
data/training_data/metadata_colors/: crello_colors_test_sklearn_lab.csv  crello_colors_val_sklearn_lab.csv
data_bert/Data_color/: color_corpus_lab_bins_16_test_sklearn.txt
notebooks/: README.md  colorRecomm.ipynb  create_json_file.ipynb  jsonFileCreator.ipynb  modelTrain.ipynb  recomm_colors.ipynb  train_model.ipynb
src/: colorConvertor.py  colorExtractor.py  dataGenerator.py  modelConfig.py  modeling.py
src/colorbert/: color_bert_model.py  input_data_generator.py  model_config.py
src/multipalette/colorbert/: color_bert_model.py  input_data_generator.py  model_config.py
src/multipalette/preprocess/: color_extractor.py
src/multipalette/utils/: color_convertor.py
src/preprocess/: color_extractor.py
