[tool.poetry]
name = "multipalette"
version = "0.1.0"
description = "Color Recommendation for Vector Graphic Documents based on Multi-Palette Representation"
authors = ["qiuqianru <qiuqianru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipycanvas = "^0.13.1"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
jupyterlab-requirements = "^0.13.0"
jupyterlab = "^3.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
